--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,20 +8,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Maple.NoActionBar">
-        <activity android:name=".ParkingDetailActivity"></activity>
+        android:theme="@style/AppTheme">
+        <activity android:name=".ParkingDetailActivity" />
         <activity android:name=".EditProfileActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".AddParkingActivity" />
         <activity android:name=".SignUpActivity" />
-        <activity android:name=".LoginScreenActivity" />
-        <activity
-            android:name=".SplashScreenActivity">
+        <activity android:name=".LoginScreenActivity"
+                  android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".SplashScreenActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter></activity>
-        <activity android:name=".MainActivity"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
