--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,7 @@ android {
         versionCode 1
         versionName "1.0"
 
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -29,6 +30,7 @@ android {
 
     buildFeatures{
         viewBinding true
+
     }
 
 }
@@ -48,8 +50,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.material:material:1.3.0-alpha03'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+//    implementation 'androidx.recyclerview:recyclerview:10dp.1.0'
 
+    implementation 'com.android.support:recyclerview-v7:23.1.0'
 
 
 }
