--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,12 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.0-alpha01'
+//        classpath 'com.android.tools.build:gradle:7.1.0-alpha01'
+
+        classpath "com.android.tools.build:gradle:4.2.1"
+
+        // For firebase support
+        classpath 'com.google.gms:google-services:4.3.8'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
