--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,7 +54,10 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:recyclerview-v7:23.1.0'
 
-    implementation platform('com.google.firebase:firebase-bom:28.0.1')
+    //Firebase authentication
+    implementation platform('com.google.firebase:firebase-bom:28.1.0')
+    implementation 'com.google.firebase:firebase-auth'
+
 
 
 }
