--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,11 +5,11 @@ plugins {
 
 android {
     compileSdkVersion 29
-//    buildToolsVersion "29.0.0"
+    buildToolsVersion "29.0.0"
 
     defaultConfig {
         applicationId "com.example.maple"
-        minSdkVersion 16
+        minSdkVersion 27
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
