Welcome screen + edit profile Functionality + UI + bugs fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".SignUpActivity" />
 
-        <activity android:name=".LoginScreenActivity"
-                  android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".LoginScreenActivity"/>
 
         <activity android:name=".SplashScreenActivity"
                   android:theme="@style/AppTheme.NoActionBar">
